syntax = "proto3";

package ca.psiphon.psiphond;

import "google/protobuf/timestamp.proto";
import "ca.psiphon.psiphond/domain_bytes.proto";
import "ca.psiphon.psiphond/failed_tunnel.proto";
import "ca.psiphon.psiphond/inproxy_broker.proto";
import "ca.psiphon.psiphond/irregular_tunnel.proto";
import "ca.psiphon.psiphond/orphan_packet.proto";
import "ca.psiphon.psiphond/remote_server_list.proto";
import "ca.psiphon.psiphond/server_blocklist.proto";
import "ca.psiphon.psiphond/server_load.proto";
import "ca.psiphon.psiphond/server_panic.proto";
import "ca.psiphon.psiphond/server_packet.proto";
import "ca.psiphon.psiphond/server_tunnel.proto";
import "ca.psiphon.psiphond/tactics.proto";
import "ca.psiphon.psiphond/unique_user.proto";

option go_package = "github.com/Psiphon-Labs/psiphon-tunnel-core/psiphon/server/pb/psiphond";

message Psiphond {
  optional google.protobuf.Timestamp timestamp = 1;

  optional string host_id = 2; //LowCardinality
  optional string host_type = 3; //LowCardinality
  optional string host_build_rev = 4; //LowCardinality
  optional string provider = 5; //LowCardinality
 
  oneof metric {
    ca.psiphon.psiphond.DomainBytes domain_bytes = 101;
    ca.psiphon.psiphond.FailedTunnel failed_tunnel = 102;
    ca.psiphon.psiphond.InproxyBroker inproxy_broker = 103;
    ca.psiphon.psiphond.IrregularTunnel irregular_tunnel = 104;
    ca.psiphon.psiphond.OrphanPacket orphan_packet = 105;
    ca.psiphon.psiphond.RemoteServerList remote_server_list = 106;
    ca.psiphon.psiphond.ServerBlocklistHit server_blocklist = 107;
    ca.psiphon.psiphond.ServerLoad server_load = 108;
    ca.psiphon.psiphond.ServerLoadDNS server_load_dns = 109;
    ca.psiphon.psiphond.ServerLoadProtocol server_load_protocol = 110;
    ca.psiphon.psiphond.ServerPanic server_panic = 111;
    ca.psiphon.psiphond.ServerPacket server_packet = 112;
    ca.psiphon.psiphond.ServerTunnel server_tunnel = 113;
    ca.psiphon.psiphond.ServerTunnelASNDestBytes server_tunnel_asn_dest_bytes = 114;
    ca.psiphon.psiphond.Tactics tactics = 115;
    ca.psiphon.psiphond.TacticsSpeedTest tactics_speedtest = 116;
    ca.psiphon.psiphond.UniqueUser unique_user = 117;
  }
}
